<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="character"
            type="com.example.marvelcharacters.domain.models.CharacterModel"/>

        <variable
            name="viewModel"
            type="com.example.marvelcharacters.ui.detail.DetailViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:fitsSystemWindows="true"
        tools:context="com.example.marvelcharacters.ui.MainActivity"
        tools:ignore="MergeRootFrame">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_app_bar_height"
            android:animateLayoutChanges="true"
            android:background="?attr/colorSurface"
            android:fitsSystemWindows="true"
            android:stateListAnimator="@animator/show_toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center"
                app:contentScrim="?attr/colorSurface"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="?attr/colorSurface"
                app:title="Titulo"
                app:titleEnabled="false"
                app:toolbarId="@id/toolbar">

                <ImageView
                    android:id="@+id/iv_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_app_bar_height"
                    android:contentDescription="@string/detail_image_content_description"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_48"
                    app:titleTextColor="?attr/colorOnSurface" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/detail_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/fab_bottom_padding"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_normal">

                <include
                    android:id="@+id/loading_state"
                    layout="@layout/layout_loading_detail" />

                <Button
                    android:id="@+id/btn_favorite"
                    style="@style/Widget.MaterialComponents.FloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_add_24"
                    android:text="@string/add_to_favs"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:textSize="@dimen/font_s"
                    android:tint="@color/white"
                    android:visibility="gone"
                    app:backgroundTint="@color/green"
                    app:layout_anchorGravity="bottom|end"
                    app:layout_constraintBottom_toTopOf="@id/tv_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@color/gray"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textSize="@dimen/font_xl"
                    app:layout_constraintBottom_toTopOf="@id/tv_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_favorite"
                    tools:text="@string/name_detail" />

                <TextView
                    android:id="@+id/tv_description"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_big"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textIsSelectable="true"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_l"
                    app:layout_constraintBottom_toTopOf="@id/tv_title_comics"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/tv_title_comics"
                    android:layout_width="0dp"
                    style="textDecoration"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textIsSelectable="true"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_l"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/comics_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_description"
                    android:text="@string/comics" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comics_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:clipToPadding="false"
                    android:minHeight="@dimen/comics_height"
                    android:background="@color/gray"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/tv_modified"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_comics"
                    app:spanCount="1"
                    tools:listitem="@layout/list_item_comics" />

                <TextView
                    android:id="@+id/tv_modified"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:gravity="end"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/comics_list"
                    tools:text="every 7 days" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="tv_description, tv_name, tv_title_comics,comics_list,tv_modified"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
