...
            android:layout_height="match_parent"
            android:background="@color/red"
            tools:context=".ui.home.HomeFragment">


            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_character"
                style="@style/MySearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/character_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
...
