...
        android:layout_marginBottom="@dimen/card_bottom_margin"
        android:onClick="@{clickListener}"
        app:cardElevation="@dimen/card_elevation"
        app:cardPreventCornerOverlap="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ly_item_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:contentDescription="@string/character_image"
...
                android:layout_marginBottom="@dimen/margin_extra_small"
                android:textAppearance="?attr/textAppearanceListItem"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_photo"
                app:layout_constraintBottom_toTopOf="@id/iv_delete"
                tools:text="Sunny F."/>

            <Button
                style="@style/ShapeAppearance.MarvelCharacters.Button.Add"
                android:id="@+id/iv_delete"
                android:src="@drawable/ic_baseline_close_32"
...
